--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TO DO</title>
+    <title>VA TO DO</title>
+    <link rel="stylesheet" href="styles/style.css" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Va To Do</h1>
+    <div class="list-wrap"></div>
+    <button class="add-btn">ADD</button>
+    <button class="save-btn">SAVE</button>
+    <script src="scripts/main.js"></script>
+  </body>
 </html>
