MODIFY: 스타일링 진행중

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="styles/style.css" type="text/css" />
   </head>
   <body>
-    <h1>Va To Do</h1>
-    <div class="list-wrap"></div>
-    <button class="add-btn">ADD</button>
-    <button class="save-btn">SAVE</button>
+    <div class="container">
+      <div class="banner-section"></div>
+      <div class="list-wrap"></div>
+      <button class="add-btn">ADD</button>
+      <button class="save-btn">SAVE</button>
+    </div>
 
     <script src="scripts/main.js"></script>
   </body>
