--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <button class="save-btn">SAVE</button>
     </div>
 
-    <script src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
