MODIFY: 카테고리 구분

--- a/pages/list.html
+++ b/pages/list.html
@@ -11,13 +11,9 @@
     <nav>
       <button onclick="handleSignOut()">Sign Out</button>
     </nav>
-    <div class="banner-section">banner</div>
+    <div class="banner-section">BANNER</div>
     <div class="tab-section">
-      <ul>
-        <li><button>All</button></li>
-        <li><button>Day</button></li>
-        <li><button>Week</button></li>
-      </ul>
+      <ul></ul>
     </div>
     <div class="container">
       <ul></ul>
