--- a/pages/list.html
+++ b/pages/list.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List</title>
-    <link rel="stylesheet" href="../styles/list.css">
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <nav>
@@ -15,7 +15,7 @@
     <div class="tab-section">
       <ul></ul>
     </div>
-    <div class="container">
+    <div class="list-container">
       <ul></ul>
       <form>
         <div>
